--- a/scss/config/_defaults.scss
+++ b/scss/config/_defaults.scss
@@ -6,6 +6,7 @@ $config: (
   prefix: '',
   use-theming: true,
   use-reset-styles: true,
+  use-default-styles: true,
   spacer: 1rem,
   base-font-size: 16,
   utility-glue: ':',
