--- a/scss/theme/tokens/_colors.scss
+++ b/scss/theme/tokens/_colors.scss
@@ -6,16 +6,16 @@ $colors: (
   white: #fff,
   black: #000,
   gray: (
-    0: #f8fafc,
-    1: #f1f5f9,
-    2: #e2e8f0,
-    3: #cbd5e1,
-    4: #94a3b8,
-    5: #64748b,
-    6: #475569,
-    7: #334155,
-    8: #1e293b,
-    9: #0f172a,
+    0: #fafafa,
+    1: #f5f5f5,
+    2: #e5e5e5,
+    3: #d4d4d4,
+    4: #a3a3a3,
+    5: #737373,
+    6: #525252,
+    7: #404040,
+    8: #262626,
+    9: #171717,
   ),
   red: (
     0: #fef2f2,
