--- a/scss/core/api/_index.scss
+++ b/scss/core/api/_index.scss
@@ -6,6 +6,7 @@
 @forward 'focus';
 @forward 'gradient';
 @forward 'layer';
+@forward 'layout';
 @forward 'media-query';
 @forward 'shadow';
 @forward 'size';
