--- a/scss/base/_animation.scss
+++ b/scss/base/_animation.scss
@@ -3,6 +3,7 @@
 // --------------------------------
 
 @use '../core' as *;
+@use '../core/helpers/internal' as *;
 
 $custom-prop-name: animation;
 
