--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -1,3 +1,5 @@
+/* Basic box element with theme defaults that can be composed with other utilities.
+  Based on https://smolcss.dev/#smol-unbreakable-boxes */
 /* Better box model */
 *,
 *::before,
@@ -328,8 +330,8 @@ html {
 }
 
 ::selection {
-  background: hsl(var(--color-hsl-accent-5), 1);
-  color: var(--text-1);
+  background: hsl(var(--color-hsl-accent-5, 167.8651685393deg, 87.2549019608%, 40%), 1);
+  color: #fff;
 }
 
 sub,
@@ -425,14 +427,32 @@ body {
 
 :root {
   /*! purgecss start ignore */
-  --color-primary: #00ffcc;
-  --color-hsl-primary: 168deg, 100%, 50%;
   --color-secondary: #ff33e4;
   --color-hsl-secondary: 307.9411764706deg, 100%, 60%;
   --color-white: #fff;
   --color-hsl-white: 0deg, 0%, 100%;
   --color-black: #000;
   --color-hsl-black: 0deg, 0%, 0%;
+  --color-primary-0: #effef9;
+  --color-hsl-primary-0: 160deg, 88.2352941176%, 96.6666666667%;
+  --color-primary-1: #cafded;
+  --color-hsl-primary-1: 161.1764705882deg, 92.7272727273%, 89.2156862745%;
+  --color-primary-2: #95fadd;
+  --color-hsl-primary-2: 162.7722772277deg, 90.990990991%, 78.2352941176%;
+  --color-primary-3: #58f0ca;
+  --color-hsl-primary-3: 165deg, 83.5164835165%, 64.3137254902%;
+  --color-primary-4: #24d7b0;
+  --color-hsl-primary-4: 166.9273743017deg, 71.3147410359%, 49.2156862745%;
+  --color-primary-5: #0dbf9b;
+  --color-hsl-primary-5: 167.8651685393deg, 87.2549019608%, 40%;
+  --color-primary-6: #08997f;
+  --color-hsl-primary-6: 169.2413793103deg, 90.0621118012%, 31.568627451%;
+  --color-primary-7: #0b7a67;
+  --color-hsl-primary-7: 169.7297297297deg, 83.4586466165%, 26.0784313725%;
+  --color-primary-8: #0e6154;
+  --color-hsl-primary-8: 170.6024096386deg, 74.7747747748%, 21.7647058824%;
+  --color-primary-9: #115046;
+  --color-hsl-primary-9: 170.4761904762deg, 64.9484536082%, 19.0196078431%;
   --color-gray-0: #fafafa;
   --color-hsl-gray-0: 0deg, 0%, 98.0392156863%;
   --color-gray-1: #f5f5f5;
@@ -535,10 +555,6 @@ body {
   --color-hsl-blue-9: 224.4444444444deg, 64.2857142857%, 32.9411764706%;
   /*! purgecss end ignore */
 }
-:root .accent-primary {
-  --color-accent: #00ffcc;
-  --color-hsl-accent: 168deg, 100%, 50%;
-}
 :root .accent-secondary {
   --color-accent: #ff33e4;
   --color-hsl-accent: 307.9411764706deg, 100%, 60%;
@@ -550,6 +566,28 @@ body {
 :root .accent-black {
   --color-accent: #000;
   --color-hsl-accent: 0deg, 0%, 0%;
+}
+:root .accent-primary {
+  --color-accent-0: #effef9;
+  --color-hsl-accent-0: 160deg, 88.2352941176%, 96.6666666667%;
+  --color-accent-1: #cafded;
+  --color-hsl-accent-1: 161.1764705882deg, 92.7272727273%, 89.2156862745%;
+  --color-accent-2: #95fadd;
+  --color-hsl-accent-2: 162.7722772277deg, 90.990990991%, 78.2352941176%;
+  --color-accent-3: #58f0ca;
+  --color-hsl-accent-3: 165deg, 83.5164835165%, 64.3137254902%;
+  --color-accent-4: #24d7b0;
+  --color-hsl-accent-4: 166.9273743017deg, 71.3147410359%, 49.2156862745%;
+  --color-accent-5: #0dbf9b;
+  --color-hsl-accent-5: 167.8651685393deg, 87.2549019608%, 40%;
+  --color-accent-6: #08997f;
+  --color-hsl-accent-6: 169.2413793103deg, 90.0621118012%, 31.568627451%;
+  --color-accent-7: #0b7a67;
+  --color-hsl-accent-7: 169.7297297297deg, 83.4586466165%, 26.0784313725%;
+  --color-accent-8: #0e6154;
+  --color-hsl-accent-8: 170.6024096386deg, 74.7747747748%, 21.7647058824%;
+  --color-accent-9: #115046;
+  --color-hsl-accent-9: 170.4761904762deg, 64.9484536082%, 19.0196078431%;
 }
 :root .accent-gray {
   --color-accent-0: #fafafa;
@@ -885,11 +923,11 @@ h1 {
   font-size: 2.25rem;
   line-height: 2.5rem;
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  color: hsl(var(--color-hsl-accent-6), 1);
+  color: hsl(var(--color-hsl-accent-4, 166.9273743017deg, 71.3147410359%, 49.2156862745%), 1);
 }
 
 a {
-  color: hsl(var(--color-hsl-accent-6), 1);
+  color: hsl(var(--color-hsl-accent-4, 166.9273743017deg, 71.3147410359%, 49.2156862745%), 1);
 }
 
 .wrapper {
@@ -900,7 +938,7 @@ a {
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 .wrapper:hover {
-  border-color: hsl(var(--color-hsl-accent-6), 1);
+  border-color: hsl(var(--color-hsl-accent-5, 167.8651685393deg, 87.2549019608%, 40%), 1);
 }
 
 .loaders {
@@ -908,7 +946,7 @@ a {
   align-items: center;
   gap: 24px;
   background-color: hsl(var(--color-hsl-gray-9), 1);
-  border-color: hsl(var(--color-hsl-accent-6), 1);
+  border-color: hsl(var(--color-hsl-accent-5, 167.8651685393deg, 87.2549019608%, 40%), 1);
 }
 .loaders:hover {
   background-color: hsl(var(--color-hsl-gray-8), 1);
@@ -926,7 +964,7 @@ a {
   width: 82px;
   height: 82px;
   color: hsl(var(--color-hsl-white), 1);
-  background-color: hsl(var(--color-hsl-accent-6), 1);
+  background-color: hsl(var(--color-hsl-accent-5, 167.8651685393deg, 87.2549019608%, 40%), 1);
   border-radius: 0.25rem;
 }
 @media not screen and (prefers-reduced-motion: reduce) {
@@ -940,12 +978,12 @@ a {
 @media (prefers-color-scheme: dark) {
   :root:not([data-theme=light]):not([color-scheme=light]):not([color-scheme=dark]):not([data-theme=dark]) .box {
     color: hsl(var(--color-hsl-black), 1);
-    background-color: hsl(var(--color-hsl-accent-7), 1);
+    background-color: hsl(var(--color-hsl-accent-6, 169.2413793103deg, 90.0621118012%, 31.568627451%), 1);
   }
 }
 :root[data-theme=dark] .box, :root[color-scheme=dark] .box {
   color: hsl(var(--color-hsl-black), 1);
-  background-color: hsl(var(--color-hsl-accent-7), 1);
+  background-color: hsl(var(--color-hsl-accent-6, 169.2413793103deg, 90.0621118012%, 31.568627451%), 1);
 }
 
 .box:hover {
@@ -955,12 +993,23 @@ a {
 
 .is-box {
   background-color: hsl(var(--color-hsl-blue-2), 1);
+  word-break: break-word;
+  hyphens: auto;
+  width: 100%;
   /* Add padding to the element, either by value, by
     theme token or using responsive padding as fallback */
   padding: clamp(var(--koi-padding-min, 0.75rem), var(--koi-padding-value, 5%), var(--koi-padding-max, 1.5rem));
   border-radius: 0.375rem;
   box-shadow: 0 10px 15px -3px rgba(0 0 0 / 0.1), 0 4px 6px -2px rgba(0 0 0 / 0.05);
   margin-block: 1rem;
+}
+@media (prefers-color-scheme: dark) {
+  :root:not([data-theme=light]):not([color-scheme=light]):not([color-scheme=dark]):not([data-theme=dark]) .is-box {
+    background-color: hsl(var(--color-hsl-accent-9, 170.4761904762deg, 64.9484536082%, 19.0196078431%), 1);
+  }
+}
+:root[data-theme=dark] .is-box, :root[color-scheme=dark] .is-box {
+  background-color: hsl(var(--color-hsl-accent-9, 170.4761904762deg, 64.9484536082%, 19.0196078431%), 1);
 }
 
 .btn {
@@ -1008,7 +1057,7 @@ a {
 .loader-2 {
   animation: loader-2-rotate 1s linear infinite;
   border: 4px solid #fff;
-  border-bottom-color: hsl(var(--color-hsl-accent-6), 1);
+  border-bottom-color: hsl(var(--color-hsl-accent-6, 169.2413793103deg, 90.0621118012%, 31.568627451%), 1);
   border-radius: 50%;
   box-sizing: border-box;
   display: inline-block;
@@ -1041,7 +1090,7 @@ a {
   position: absolute;
 }
 .loader-3::after {
-  border-color: hsl(var(--color-hsl-accent-6), 1);
+  border-color: hsl(var(--color-hsl-accent-6, 169.2413793103deg, 90.0621118012%, 31.568627451%), 1);
   transform: rotate3d(90, 90, 0, 180deg);
 }
 @keyframes loader-3-rotate {
@@ -1076,7 +1125,7 @@ a {
 }
 .loader-4::after {
   border: 3px solid transparent;
-  border-bottom-color: hsl(var(--color-hsl-accent-6), 1);
+  border-bottom-color: hsl(var(--color-hsl-accent-6, 169.2413793103deg, 90.0621118012%, 31.568627451%), 1);
   border-radius: 50%;
   box-sizing: border-box;
   content: "";
@@ -1108,7 +1157,7 @@ a {
 }
 .loader-5::after {
   border: 3px solid transparent;
-  border-bottom-color: hsl(var(--color-hsl-accent-6), 1);
+  border-bottom-color: hsl(var(--color-hsl-accent-6, 169.2413793103deg, 90.0621118012%, 31.568627451%), 1);
   border-radius: 50%;
   box-sizing: border-box;
   content: "";
