--- a/scss/base/_default.scss
+++ b/scss/base/_default.scss
@@ -1,10 +1,10 @@
 @use '../core' as *;
-@use '../core/helpers/internal' as *;
+// @use '../core/helpers/internal' as *;
 
 @mixin styles {
   ::selection {
     background: accent(5);
-    color: css-var(text-1);
+    color: #fff;
   }
 
   sub,
