--- a/scss/core/api/_layout.scss
+++ b/scss/core/api/_layout.scss
@@ -15,10 +15,17 @@
 //   Mixins
 // -------------------------------------
 
-@mixin box($color: null, $bg-color: null, $padding: null, $rounded: null, $shadow: null) {
-  color: $color;
+/* Basic box element with theme defaults that can be composed with other utilities.
+  Based on https://smolcss.dev/#smol-unbreakable-boxes */
+@mixin box($max-width: 100%, $color: null, $bg-color: null, $padding: null, $rounded: null, $shadow: null) {
   background-color: $bg-color;
+  color: $color;
+  word-break: break-word;
+  hyphens: auto;
 
+  @if $max-width {
+    width: $max-width;
+  }
   /* Add padding to the element, either by value, by
     theme token or using responsive padding as fallback */
   @if $padding {
