--- a/scss/theme/tokens/_colors.scss
+++ b/scss/theme/tokens/_colors.scss
@@ -5,6 +5,18 @@
 $colors: (
   white: #fff,
   black: #000,
+  primary: (
+    0: #effef9,
+    1: #cafded,
+    2: #95fadd,
+    3: #58f0ca,
+    4: #24d7b0,
+    5: #0dbf9b,
+    6: #08997f,
+    7: #0b7a67,
+    8: #0e6154,
+    9: #115046,
+  ),
   gray: (
     0: #fafafa,
     1: #f5f5f5,
