--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -390,18 +390,18 @@ select {
 }
 
 [type=checkbox]:checked {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3E%3C/svg%3E");
 }
 
 [type=radio] {
   border-radius: 9999px;
 }
 [type=radio]:checked {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='white'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='8' cy='8' r='3'/%3E%3C/svg%3E");
 }
 
 select {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 16 16'%3E%3Cpath stroke='%23737373' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6' /%3E%3C/svg%3E");
   background-position: right 0.75em center;
   background-repeat: no-repeat;
   background-size: 16px 12px;
@@ -854,66 +854,54 @@ figure figcaption {
 }
 
 body {
+  width: 100%;
+  /* Center the element */
+  margin-left: auto;
+  margin-right: auto;
+  /* Add padding to the container, either by value, by
+      theme token or using responsive padding as fallback */
+  padding-inline: clamp(var(--koi-spacing-min, 0.75rem), var(--koi-spacing-value, 5%), var(--koi-spacing-max, 1.5rem));
+  margin-block: clamp(var(--koi-spacing-min, 0.75rem), var(--koi-spacing-value, 5%), var(--koi-spacing-max, 1.5rem));
   color: var(--text-1);
   background-color: var(--surface-1);
 }
-@media screen and (min-width: 0) {
+@media screen and (min-width: 1440px) {
   body {
-    width: 100%;
     /* Set the max-width of the element to match the
       min-width of the current breakpoint */
-    /* Center the element */
-    margin-left: auto;
-    margin-right: auto;
-    /* Add padding to the container, either by value, by
-      theme token or using responsive padding as fallback */
-    padding-inline: clamp(var(--koi-padding-min, 0.75rem), var(--koi-padding-value, 5%), var(--koi-padding-max, 1.5rem));
   }
 }
-@media screen and (min-width: 1024px) {
-  body {
-    width: 100%;
-    /* Set the max-width of the element to match the
-      min-width of the current breakpoint */
-    /* Center the element */
-    margin-left: auto;
-    margin-right: auto;
-    /* Add padding to the container, either by value, by
-      theme token or using responsive padding as fallback */
-    padding-inline: clamp(var(--koi-padding-min, 0.75rem), var(--koi-padding-value, 5%), var(--koi-padding-max, 1.5rem));
-  }
-}
-@media screen and (min-width: 1024px) and (min-width: 240px) {
+@media screen and (min-width: 1440px) and (min-width: 240px) {
   body {
     max-width: 240px;
   }
 }
-@media screen and (min-width: 1024px) and (min-width: 360px) {
+@media screen and (min-width: 1440px) and (min-width: 360px) {
   body {
     max-width: 360px;
   }
 }
-@media screen and (min-width: 1024px) and (min-width: 480px) {
+@media screen and (min-width: 1440px) and (min-width: 480px) {
   body {
     max-width: 480px;
   }
 }
-@media screen and (min-width: 1024px) and (min-width: 768px) {
+@media screen and (min-width: 1440px) and (min-width: 768px) {
   body {
     max-width: 768px;
   }
 }
-@media screen and (min-width: 1024px) and (min-width: 1024px) {
+@media screen and (min-width: 1440px) and (min-width: 1024px) {
   body {
     max-width: 1024px;
   }
 }
-@media screen and (min-width: 1024px) and (min-width: 1440px) {
+@media screen and (min-width: 1440px) and (min-width: 1440px) {
   body {
     max-width: 1440px;
   }
 }
-@media screen and (min-width: 1024px) and (min-width: 1920px) {
+@media screen and (min-width: 1440px) and (min-width: 1920px) {
   body {
     max-width: 1920px;
   }
@@ -923,15 +911,15 @@ h1 {
   font-size: 2.25rem;
   line-height: 2.5rem;
   font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  color: hsl(var(--color-hsl-accent-4, 166.9273743017deg, 71.3147410359%, 49.2156862745%), 1);
+  color: hsl(var(--color-hsl-accent-5, 167.8651685393deg, 87.2549019608%, 40%), 1);
 }
 
 a {
-  color: hsl(var(--color-hsl-accent-4, 166.9273743017deg, 71.3147410359%, 49.2156862745%), 1);
+  color: hsl(var(--color-hsl-accent-5, 167.8651685393deg, 87.2549019608%, 40%), 1);
 }
 
 .wrapper {
-  padding: clamp(var(--koi-padding-min, 0.75rem), var(--koi-padding-value, 5%), var(--koi-padding-max, 1.5rem));
+  padding: clamp(var(--koi-spacing-min, 0.75rem), var(--koi-spacing-value, 5%), var(--koi-spacing-max, 1.5rem));
   margin-top: 1rem;
   border: 2px solid hsl(var(--color-hsl-gray-6), 1);
   border-radius: 0.25rem;
@@ -998,7 +986,7 @@ a {
   width: 100%;
   /* Add padding to the element, either by value, by
     theme token or using responsive padding as fallback */
-  padding: clamp(var(--koi-padding-min, 0.75rem), var(--koi-padding-value, 5%), var(--koi-padding-max, 1.5rem));
+  padding: clamp(var(--koi-spacing-min, 0.75rem), var(--koi-spacing-value, 5%), var(--koi-spacing-max, 1.5rem));
   border-radius: 0.375rem;
   box-shadow: 0 10px 15px -3px rgba(0 0 0 / 0.1), 0 4px 6px -2px rgba(0 0 0 / 0.05);
   margin-block: 1rem;
